# liveframe-rs

./: .gitignore  Cargo.toml  README.md
assets/: liveframe_layout.glade  liveframe_layout.glade~
src/: main.rs
src/gui/: mod.rs  popover.rs  viewstack.rs
src/network/: mod.rs
