[package]
name = "liveframe-rs"
version = "0.1.0"
authors = ["cgduncan7 <cgduncan7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9", features = ["v3_24"] }
gio = { version = "0.9", features = ["v2_56"] }